Exp-2/output/hf-eval-data-v3-reuslt-13b-eval/f00746_segment_objects.err
  File "./f00746_segment_objects.py", line 69
    img_byte_stream =
                    ^
SyntaxError: invalid syntax
